--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
-<img src="k.gif" alt="HTML5 Icon">
-//style="width:128px;height:128px;"
-<css src="css.css"></script>
+<html>
+
+<head>
+<link rel="stylesheet" href="style.css">
+<title>google homepage</title>
+</head>
+   <body>
 <ul>
-   <li><a href="default.asp">Home</a></li>
-   <li><a href="news.asp">News</a></li>
-   <li><a href="contact.asp">Contact</a></li>
-   <li><a href="about.asp">About</a></li>
+   <li><a href="#">Home</a></li>
+   <li><a href="#">News</a></li>
+   <li><a href="#">Contact</a></li>
+   <li><a href="#">About</a></li>
  </ul>
-<form>
-   <input type="text" name="search"><br>
-   <button type="button">Google Search</button>
-   <button type="button">I'm Feeling Lucky</button>
-  </form>
-  Google offered in: Kiswahili <a href="https://www.google.com/setprefs?sig=0_vv0ckycNe3w-T-W2k42CY_Dtorw%3D&amp;hl=sw&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwiejf-pgdDjAhVKzBoKHfPDC8AQ2ZgBCBg">
+ <div class="container"> 
+ <img src="k.gif" alt="HTML5 Icon" style="width:500px;height:250px;"/>
+ <div class="input">
+   <form> 
+    <input type="text" name="search"><br>
+    <button type="button">Google Search</button>
+    <button type="button">I'm Feeling Lucky</button>
+  </form>  
+</div>
+    
+ </div>
+ Google offered in: Kiswahili
+  </body>
+  
+</html>
    
